# anndata-duckdb-extension

./: .gitignore  .lfsconfig  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  RELEASE.md  create_test_layers.py  extension_config.cmake  main.py  pyproject.toml  setup-dev.sh  vcpkg-configuration.json  vcpkg.json
.claude/skills/: build-from-scratch.md
.github/workflows/: AutoRelease.yml  Deploy.yml  DuckDBNextBuild.yml  ExtensionTemplate.yml  MainDistributionPipeline.yml  MonitorUpstream.yml  Release.yml  TestSecrets.yml  UpcomingDuckdbPipeline.yml
community-extension/: description.yml
demo/: .gitignore  README.md  demo-local.tape  demo-remote.tape  demo-s3-auth.tape  demo.tape  test-timing.sh
docs/: AWS_DEPLOYMENT.md  SIGNING.md  UPDATING.md  s3-bucket-policy.json
scripts/: bump_version.py  check-duckdb-release.sh  deploy-extension.sh  start-test-server.sh
spec/: anndata-duckdb-extension.md  api-reference.md  attach-semantics-spec.md  examples.md  hdf5-c-api-migration-implementation.md  hdf5-c-api-migration.md  hdf5-serialization-failure-analysis.md  implementation-plan.md  lzf-filter-spec.md  projection-pushdown-spec.md  remote-file-access-spec.md  uns-handling-spec.md  var-column-detection-spec.md  vcpkg-migration-plan.md  wildcard-query-spec.md
src/: anndata_extension.cpp  anndata_scanner.cpp  anndata_storage.cpp  glob_handler.cpp  h5_reader.cpp  h5_reader_multithreaded.cpp  h5_reader_new.cpp  schema_harmonizer.cpp
src/include/: anndata_extension.hpp  anndata_scanner.hpp  anndata_storage.hpp  anndata_version.hpp.in  duckdb_compat.hpp  glob_handler.hpp  h5_file_cache.hpp  h5_handles.hpp  h5_reader.hpp  h5_reader_multithreaded.hpp  h5_reader_new.hpp  s3_credentials.hpp  schema_harmonizer.hpp
src/lzf/: lzf.h  lzfP.h  lzf_c.c  lzf_d.c  lzf_filter.c  lzf_filter.h
src/vfd/: h5fd_http.cpp  h5fd_http.hpp
test/data/: create_sparse_csc_test.py  create_sparse_test.py  test_categorical_var.h5ad  test_complex_uns.h5ad  test_compound_dataset.h5ad  test_comprehensive.h5ad  test_duplicate_var_names.h5ad  test_int32_codes.h5ad  test_large_categorical.h5ad  test_layer_gene_names.h5ad  test_layers.h5ad  test_no_index.h5ad  test_obs_categorical.h5ad  test_obsm_varm.h5ad  test_obsm_varm_types.h5ad  test_obsp_varp.h5ad  test_raw.h5ad  test_small.h5ad  test_sparse.h5ad  test_sparse_csc.h5ad  test_uns.h5ad  wildcard_sample1.h5ad  wildcard_sample2.h5ad  wildcard_sample3.h5ad
test/python/: create_test_categorical_var.py  create_test_compound_dataset.py  create_test_comprehensive.py  create_test_duplicate_var_names.py  create_test_int32_codes.py  create_test_large_categorical.py  create_test_layer_names.py  create_test_no_index.py  create_test_obs_categorical.py  create_test_obsp.py  create_test_raw.py  create_test_uns.py  create_test_wildcard.py
test/remote/: http_server.py
test/sql/: anndata_basic.test  anndata_info.test  anndata_layers.test  anndata_obsm_varm.test  anndata_raw.test  anndata_sparse.test  anndata_sparse_csc.test  anndata_union.test  attach_basic.test  attach_var_columns.test  compound_dataset.test  duplicate_var_names.test  error_messages.test  int32_codes.test  large_categorical.test  no_index.test  obs_categorical.test  obsp_varp.test  uns.test  wildcard_local.test
test/sql/remote/: http_basic.test  s3_basic.test  s3_error_messages.test  s3_settings_credentials.test  s3_wildcard.test
test_data/: test_small.h5ad  test_with_layers.h5ad
vcpkg-overlay/ports/hdf5/: portfile.cmake  vcpkg.json
