[project]
name = "anndata-duckdb-extension"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "black>=24",
    "clang-format==11.0.1",
    "cmake-format>=0.6.13",
]
